app/assets/stylesheets/posts.css.scss
// Place all the styles related to the posts controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

@import 'bourbon';
@import 'neat';

$blue: #41b7d8;
$red: #e95c33;
$black: #2c3e50;
$gray: rgba(0,0,0,0.3);
$postPadding: 0 3% 0 3%;


.label { @include span-columns(3); }

.assets {
  @include outer-container;
  .images{
    @include span-columns(9);
    img {
      display: inline-block;
      margin: 2%;
    }
  }
}

.asset {
  opacity: 0.6;
}

.asset.active, .asset:hover {
  opacity: 1;
}

.asset-tools {
  @include outer-container;
  .tools-container {
    @include span-columns(9);
    .asset-url {
      @include span-columns(6 of 9);
    }
    .remove-asset {
      @include span-columns(3 of 9);
    }
  }
}


#post_content{
	height:300px;
}

.post, #post {
  p {
    word-break: break-all;
  }
}

#add-asset {
  display: block;
}

.asset {
  display: inline-block;
}

.post-meta {
  font-size: 0.75em;
  display: block;
  text-align: center;
  @include outer-container;
  section {
    @include span-columns(4);
  }
  a {
    color: $black;
  }
  i {
    color: $red;
  }
}



#post {
  max-width: 950px;
  background: #ffffff;
  padding: 3%;
  margin: 0 auto;
  border: 3px solid #91b1ac;
  box-shadow: 5px 5px 0 rgba(0,0,0,0.1);
}

.hidden {
  display: none;
}

h1 {
  font-size: 1.5em;
  text-align: center;
}

img {
  display: block;
  max-width: 100%;
  margin: 0 auto;
}


#cross {
  display: none;
  position: absolute;
  z-index: 1;
  top:0;
  left:0;
}

